feature: use `[$workspace] $repo_name ($repo_path)` as main window's title (#818)

--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -10,7 +10,7 @@
                     x:DataType="vm:Launcher"
                     x:Name="ThisControl"
                     Icon="/App.ico"
-                    Title="SourceGit"
+                    Title="{Binding Title}"
                     MinWidth="1024" MinHeight="600"
                     WindowStartupLocation="CenterScreen"> 
   <Grid>
