--- a/src/Views/LauncherPage.axaml
+++ b/src/Views/LauncherPage.axaml
@@ -125,7 +125,7 @@
                         </Button> 
                       </Grid>
 
-                      <Border Grid.Row="1" Margin="8" Background="{DynamicResource Brush.Contents}" BorderThickness="1" BorderBrush="{DynamicResource Brush.Border2}">
+                      <Border Grid.Row="1" Margin="8" Background="Transparent">
                         <ScrollViewer MaxHeight="200" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                           <TextBlock Margin="4,2" TextWrapping="NoWrap" Text="{Binding Message}"/>
                         </ScrollViewer>
